@@ -287,31 +287,10 @@
         <profile>
             <id>jdk9</id>
             <activation>
-                <activeByDefault>false</activeByDefault>                                
-                <jdk>9-ea</jdk>
+                <activeByDefault>false</activeByDefault>
+                <jdk>9</jdk>
             </activation>
-            <properties />           
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
-                            <systemPropertyVariables />
-                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
-                        <configuration>
-                            <!-- See #852 and #701 for the add exports or add opens option
-                            -->                            
-                            <argLine>-Xmx100m -Xms100m --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <!-- 1. reader-shp does not work yet with jdk9. 2. See #852 and #701 for possible compiler options -->
         </profile>
     </profiles>
 
